<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/fondoapp"
    android:id="@+id/activityPrincipal">

    <TextView
        android:id="@+id/buscarRecetasTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="144dp"
        android:gravity="center_horizontal"
        android:text="@string/buscar_recetas"
        android:textStyle="bold"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/buscadorEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buscarRecetasTextView"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="56dp"
        android:hint="@string/buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscarRecetasTextView" />

    <LinearLayout
        android:id="@+id/layoutContenedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buscadorEditText"
        android:layout_marginTop="56dp"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buscadorEditText">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/diet"
                android:textSize="20dp"
                android:gravity="center_horizontal"/>

            <Spinner
                android:id="@+id/spinner_diet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/salud"
                android:textSize="20dp"
                android:gravity="center_horizontal"/>

            <Spinner
                android:id="@+id/spinner_Salud"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:text="@string/tipo"
                android:textSize="20dp"
                android:gravity="center_horizontal"/>

            <Spinner
                android:id="@+id/spinner_Tipo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/boton_Buscar"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="128dp"
        android:text="@string/buscar"
        app:backgroundTint="#DA185A"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutContenedor" />

    <Button
        android:id="@+id/boton_favoritos"
        android:layout_width="126dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="40dp"
        android:text="@string/favoritos"
        app:backgroundTint="#DA185A"
        app:layout_constraintBaseline_toBaselineOf="@+id/boton_Buscar"
        app:layout_constraintEnd_toEndOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>