<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DescripcionReceta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="16dp">

            <ImageView
                android:id="@+id/imagenReceta"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_launcher_foreground"
                android:layout_marginRight="12dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:id="@+id/nombreReceta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Nombre Receta"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_toRightOf="@id/imagenReceta"/>
            <TextView
                android:id="@+id/rendimientoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nombreReceta"
                android:layout_toRightOf="@id/imagenReceta"
                android:layout_marginTop="16dp"
                android:layout_marginRight="8dp"
                android:textSize="16sp"
                android:text="@string/rendimiento"/>
            <TextView
                android:id="@+id/rendimiento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/nombreReceta"
                android:layout_toRightOf="@id/imagenReceta"
                android:layout_marginTop="16dp"
                android:textSize="16sp"
                android:layout_marginLeft="120dp"
                android:text="0"/>
            <TextView
                android:id="@+id/tiempo_totalTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tiempototal"
                android:layout_below="@id/rendimientoTextView"
                android:layout_toRightOf="@id/imagenReceta"
                android:layout_marginTop="16dp"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/tiempo_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textSize="16sp"
                android:layout_toRightOf="@id/imagenReceta"
                android:layout_below="@id/rendimiento"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="120dp"/>
            <ImageView
                android:id="@+id/ic_fav"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/ic_favorite"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="125dp"
                android:layout_marginRight="24dp"/>
            <TextView
                android:id="@+id/ingredientesNecesarios"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imagenReceta"
                android:text="@string/cabeceraFragment"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:id="@+id/ingredientes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ingredientesNecesarios"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="8dp"/>
            <TextView
                android:id="@+id/infoNutricional"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_below="@id/ingredientes"
                android:text="@string/infoNutricional"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginLeft="8dp"/>

            <TextView
                android:id="@+id/energiaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/energia"
                android:textSize="16sp"
                android:layout_below="@id/infoNutricional"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/energia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_below="@id/infoNutricional"
                android:layout_toRightOf="@id/energiaTextView"
                android:text="0"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/unidadEnergia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/infoNutricional"
                android:layout_toRightOf="@id/energia"
                android:text="g"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/grasaTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grasa"
                android:textSize="16sp"
                android:layout_below="@id/energiaTextView"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/grasas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_below="@id/energiaTextView"
                android:layout_toRightOf="@id/grasaTextView"
                android:text="0"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/unidadGrasa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/energiaTextView"
                android:layout_toRightOf="@id/grasas"
                android:text="g"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/saturadasTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturadas"
                android:textSize="16sp"
                android:layout_below="@id/grasaTextView"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/saturadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_below="@id/grasaTextView"
                android:layout_toRightOf="@id/saturadasTextView"
                android:text="0"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/unidadSaturadas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/grasaTextView"
                android:layout_toRightOf="@id/saturadas"
                android:text="g"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/azucarTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/azucar"
                android:textSize="16sp"
                android:layout_below="@id/saturadasTextView"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/azucar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_below="@id/saturadasTextView"
                android:layout_toRightOf="@id/azucarTextView"
                android:text="0"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/unidadAzucar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/saturadasTextView"
                android:layout_toRightOf="@id/azucar"
                android:text="g"
                android:textSize="16sp"/>
            <TextView
                android:id="@+id/proteinasTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/proteinas"
                android:textSize="16sp"
                android:layout_below="@id/azucarTextView"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/proteinas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_below="@id/azucarTextView"
                android:layout_toRightOf="@id/proteinasTextView"
                android:text="0"
                android:textSize="16sp"
                android:layout_marginTop="8dp"/>
            <TextView
                android:id="@+id/unidadProteinas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@id/azucarTextView"
                android:layout_toRightOf="@id/proteinas"
                android:text="g"
                android:textSize="16sp"/>
            <Button
                android:id="@+id/verWeb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/verWeb"
                app:backgroundTint="#DA185A"
                android:layout_below="@id/proteinasTextView"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="20dp"/>
        </RelativeLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>